ddmedistock/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ddmedistock
  labels:
    app.kubernetes.io/part-of: ddmedistock
