ddmedistock/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddmedistock-app
  namespace: ddmedistock
  labels:
    app.kubernetes.io/name: ddmedistock
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ddmedistock
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: 3000
